--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    
+    <p>Lorem ipsum dolor sit amet.</p>
+
     
 </body>
 </html>
