--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <p>Lorem ipsum dolor sit amet.</p>
+    <p>git jest git</p>
 
     
 </body>
