--- a/index.html
+++ b/index.html
@@ -3,13 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>kaukulator</title>
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>git jest git</p>
+    <div>
+        <input type="text">
+        <div>
+            <button class="btn" id=""></class>C</button>
+            <button class="btn" id=""></class> </button>
+            <button class="btn" id=""></class> </button>
+            <button class="btn" id=""></class>/</button>
+        </div>
+        
+        <div>
+            <button class="btn"></class> 7</button>
+            <button class="btn"></class> 8</button>
+            <button class="btn"></class> 9</button>
+            <button class="btn"></class> *</button>
+        </div>
 
-    
+        <div>
+            <button class="btn"></class> 4</button> 
+            <button class="btn"></class> 5</button>
+            <button class="btn"></class> 6</button>
+            <button class="btn"></class> -</button>
+        </div>
+        <div>
+            <button class="btn"></class> 1</button>
+            <button class="btn"></class> 2</button>
+            <button class="btn"></class> 3</button>
+            <button class="btn"></class> +</button>
+        </div>
+        <div>
+            <button class="btn"></class> +/-</button>
+            <button class="btn"></class> 0</button>
+            <button class="btn"></class> ,</button>
+            <button class="btn"></class> =</button>
+        </div>
+
+    </div>
 </body>
 </html>
