--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <div>
-        <input type="text">
-        <div>
+        <input type="text" id="inputShowScore">
+        <div class=divWithbutton>
             <button class="btn" id=""></class>C</button>
-            <button class="btn" id=""></class> </button>
-            <button class="btn" id=""></class> </button>
+            <button class="btn btn-disabled" id=""></class>n</button>
+            <button class="btn btn-disabled" id=""></class>n</button>
             <button class="btn" id=""></class>/</button>
         </div>
         
-        <div>
+        <div class="divWithbutton">
             <button class="btn"></class> 7</button>
             <button class="btn"></class> 8</button>
             <button class="btn"></class> 9</button>
             <button class="btn"></class> *</button>
         </div>
 
-        <div>
-            <button class="btn"></class> 4</button> 
-            <button class="btn"></class> 5</button>
-            <button class="btn"></class> 6</button>
-            <button class="btn"></class> -</button>
+        <div class="divWithbutton">
+            <button class="btn"></class>4</button> 
+            <button class="btn"></class>5</button>
+            <button class="btn"></class>6</button>
+            <button class="btn"></class>-</button>
         </div>
-        <div>
-            <button class="btn"></class> 1</button>
-            <button class="btn"></class> 2</button>
-            <button class="btn"></class> 3</button>
-            <button class="btn"></class> +</button>
+        <div class="divWithbutton">
+            <button class="btn"></class>1</button>
+            <button class="btn"></class>2</button>
+            <button class="btn"></class>3</button>
+            <button class="btn"></class>+</button>
         </div>
-        <div>
-            <button class="btn"></class> +/-</button>
-            <button class="btn"></class> 0</button>
-            <button class="btn"></class> ,</button>
-            <button class="btn"></class> =</button>
+        <div class="divWithbutton">
+            <button class="btn"></class>+/-</button>
+            <button class="btn"></class>0</button>
+            <button class="btn"></class>,</button>
+            <button class="btn"></class>=</button>
         </div>
 
     </div>
