--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
     <link rel="stylesheet" href="style.css">
     <div>
         <input type="text" id="inputShowScore">
-        <div class=divWithbutton>
+        <div class="divWithbutton" id="all">
             <button class="btn" id=""></class>C</button>
             <button class="btn btn-disabled" id=""></class>n</button>
             <button class="btn btn-disabled" id=""></class>n</button>
             <button class="btn" id=""></class>/</button>
         </div>
         
-        <div class="divWithbutton">
+        <div class="divWithbutton" id="all">
             <button class="btn"></class> 7</button>
             <button class="btn"></class> 8</button>
             <button class="btn"></class> 9</button>
             <button class="btn"></class> *</button>
         </div>
 
-        <div class="divWithbutton">
+        <div class="divWithbutton" id="all">
             <button class="btn"></class>4</button> 
             <button class="btn"></class>5</button>
             <button class="btn"></class>6</button>
             <button class="btn"></class>-</button>
         </div>
-        <div class="divWithbutton">
+        <div class="divWithbutton" id="all">
             <button class="btn"></class>1</button>
             <button class="btn"></class>2</button>
             <button class="btn"></class>3</button>
             <button class="btn"></class>+</button>
         </div>
-        <div class="divWithbutton">
+        <div class="divWithbutton" id="all">
             <button class="btn"></class>+/-</button>
             <button class="btn"></class>0</button>
             <button class="btn"></class>,</button>
